--- a/resources/blogs/third-blog.html
+++ b/resources/blogs/third-blog.html
@@ -1,3 +1,10 @@
-<h3>Third blog title</h3>
+---
+title: Third blog
+slug: my-third-blog
+intro: this is content intro....
+created_at : 9.1.2024
+---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad possimus accusamus repudiandae quas perspiciatis necessitatibus blanditiis laborum sed consequatur maiores iusto saepe provident animi iure, atque laudantium veniam, illo consectetur.</p>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos cumque consequuntur iusto in sunt velit expedita quibusdam architecto, suscipit quae? Ipsa magni libero iste dolorem porro ratione sit sunt sequi!
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos cumque consequuntur iusto in sunt velit expedita quibusdam architecto, suscipit quae? Ipsa magni libero iste dolorem porro ratione sit sunt sequi!
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos cumque consequuntur iusto in sunt velit expedita quibusdam architecto, suscipit quae? Ipsa magni libero iste dolorem porro ratione sit sunt sequi!
