--- a/resources/blogs/fourth-blog.html
+++ b/resources/blogs/fourth-blog.html
@@ -1,8 +1,8 @@
 ---
-title: Second Blog
-slug: my-second-blog
+title: Fourth Blog
+slug: my-fourth-blog
 intro: this is content intro....
-created_at : 10.1.2024
+created_at : 8.1.2024
 ---
 
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos cumque consequuntur iusto in sunt velit expedita quibusdam architecto, suscipit quae? Ipsa magni libero iste dolorem porro ratione sit sunt sequi!
